--- a/gbContribute.html
+++ b/gbContribute.html
@@ -98,7 +98,7 @@
 
 									<!-- Content -->
 									<!--https://geoboundary-contributions.herokuapp.com https://geoboundaries.geolab.wm.edu/api_contribute/-->
-									<form id="contribute-form" action="http://localhost:8000/api_contribute/" method="post" enctype="multipart/form-data">
+									<form id="contribute-form" action="https://geoboundaries.geolab.wm.edu/api_contribute/" method="post" enctype="multipart/form-data">
 										<!--the 'enctype' attribute above is necessary for django to receive the file-->
 										<div id="contribute-tab-container" style="height:80%; overflow:auto">
 					
